compiler/weave_syntax/tests/data/syntax/IncompleteNamespace1.error
error: Unexpected tokens
        --> <source>:1:1
         |
       1 | namespace 
         | ^^^^^^^^^
error: Expected ';'
        --> <source>:2:1
         |
       2 | 
         | ^
